2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (add_one_vpn_connection): don't crash on connections that are actually
			invalid but that the applet shows anyway.  Still need a better way
			to fix this.
		- (nma_menu_vpn_item_clicked): clarify action when the selected VPN
			connection is already active

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_changed): fix logic decision on
			connection comparison; replace settings rather than replacing the
			whole connection itself

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/vpn-properties/nm-vpn-properties.c
		- (fixup_nm_connection_vpn): ensure the resulting NMConnection is valid
			before trying to use it

2007-12-04  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (wireless_dialog_response_cb): ensure that the connection gets updated
			when it's not a new connection
		- (get_secrets_dialog_response_cb): don't nag the user about the CA cert
			if they elected to ignore the warning

2007-12-04  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method-ttls.c
		- (fill_connection): correctly handle & update the CA certificate
			ignore option

2007-12-04  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method.c
	  po/POTFILES.in
		- (eap_method_default_file_chooser_filter_new): add a filter name

2007-11-29  Tambet Ingo  <tambet@gmail.com>

	* src/applet.c (find_connection): Handle UMTS setting.
	(new_auto_umts_setting): Implement.
	(new_auto_connection): Handle UMTS device.
	(nma_menu_add_device_item): Ditto.
	(foo_device_state_changed): Ditto.
	(foo_umts_state_change): Implement.
	(nma_icons_free): Free UMTS device icon.
	(nma_icons_load_from_disk): Load UMTS device icon. For now, use the adhoc icon.

	* src/menu-items.c (umts_menu_item_new): Implement.

	* src/gconf-helpers/gconf-helpers.c (read_one_setting_value_from_gconf): Handle