@@ -1,6 +1,12 @@
 2007-12-05  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
+		- (get_vpn_connections): don't show VPN connections that don't have
+			the VPN Properties item
+
+2007-12-05  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
 		- (add_one_vpn_connection): don't crash on connections that are actually
 			invalid but that the applet shows anyway.  Still need a better way
 			to fix this.
